# adventofcode

./: .gitignore  .isort.cfg  README.md  mkday.sh  pyproject.toml  tox.ini
2015/: 01.py  03.py  04.py  06.py  10.py  11.py  12.py
2020/: 02.py  03.py  04.py  05.py  07.py  08.py  10.py  13.py  18.py  19.py  20.py  21.py  22.py  25.py
2021/: 03.py  04.py  07.py  09.py  11.py
2022/: 02.py  03.py
aocli/: __main__.py
src/: main.py  utils.py
src/2015/: 02.py  05.py  07.py  08.py  09.py  10.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py
src/2020/: 01.py  06.py  09.py  11.py  12.py  14.py  15.py  16.py  17.py  23.py  24.py
src/2021/: 01.py  02.py  05.py  06.py  08.py  10.py
src/2022/: 01.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  15.py
src/2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py
src/2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  23.py
src/input/2024/: 16.toml  17.toml  18.toml  19.toml  20.toml  23.toml
