[project]
name = "adventofcode"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ilya Kamens", email = "ilyakamens@gmail.com"},
]
dependencies = [
    "advent-of-code-data>=2.0.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
solve = "python -m aocli"
