[project]
name = "adventofcode"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ilya Kamens", email = "ilyakamens@gmail.com"},
]
dependencies = [
    "advent-of-code-data>=2.0.4",
    "rich>=13.9.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
