[project]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code solutions"
authors = [
    {name = "Ilya"},
]
dependencies = [
    "advent-of-code-data>=2.0.4",
    "rich>=13.9.4",
    "ruff>=0.8.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "I"]
ignore = ["E741"]

[tool.ruff.format]
quote-style = "single"
